--- a/style.css
+++ b/style.css
@@ -213,27 +213,12 @@ i {
   height: 32vh;
   padding-top: 20px;
   color: black;
-  background: linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,1)); 
+  background: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,1)); 
 /*   background-color: rgba(36,39,51,0.9); */
   border-radius: 8px;
   pointer-events: none;
   transition: opacity 0.2s ease-in-out;
 }
-
-/* #info-box {
-  opacity: 0; 
-  display: grid;
-  grid-template-columns: 30% 70%;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 32vh;
-  color: black;
-  background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); 
-  pointer-events: none;
-  transition: opacity 0.2s ease-in-out;
-} */
 
 #info-left, #info-right {
   position: relative;
@@ -243,8 +228,35 @@ i {
 #info-left {
   display: grid;
   grid-template-rows : 10% 25% 65%;
-  padding-left: 2.4vw;
-/*   background-color: orange; */
+  padding: 2.4vw;
+  overflow: hidden;
+}
+
+#address_dong, #address_sigu, #address_des {
+  padding-bottom: 60px;
+  
+  background-color: orange;
+}
+
+/* text - left */
+#address_dong {
+  font-size: 3.8rem;
+  margin: 0;
+  word-break: keep-all;
+/*   background-color: yellow; */
+}
+
+#address_sigu {
+  font-size: 1.2rem;
+  word-break: keep-all;
+/*   background-color: green; */
+}
+
+#address_des {
+  font-size: 1.2rem;
+  overflow: scroll;
+/*   word-break: keep-all; */
+/*   background-color: red; */
 }
 
 #info-right {
@@ -254,6 +266,12 @@ i {
   grid-template-rows : 20% 15% 65%;
   padding-right: 2.4vw;
 /*   background-color: yellow; */
+}
+
+/* text - right */
+.right_title {
+  font-weight: 700;
+  font-size: 1.05rem;
 }
 
 #profile_grid {
@@ -288,40 +306,11 @@ i {
   margin: auto;
 }
 
-
-/* text - right */
-.right_title {
-  font-weight: 700;
-  font-size: 1.05rem;
-}
-
 .name {
   font-size: 1.05rem;
   width: 100%;
   padding-top: 0.7rem;
 }
-
-/* text - left */
-#address_dong {
-  font-size: 3.8rem;
-  margin: 0;
-  padding-top: 0.4rem;
-  word-break: keep-all;
-}
-
-#address_sigu {
-  font-size: 1.2rem;
-  margin: 0;
-  word-break: keep-all;
-}
-
-#address_des {
-  font-size: 1.2rem;
-  margin: 0;
-  padding-top: 1rem;
-  word-break: keep-all;
-}
-
 
 
 /*맵박스 로고 가리기*/
